@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2002, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -37,13 +37,11 @@ import javax.xml.transform.sax.TransformerHandler;
 
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.DataProvider;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow test.astro.AstroTest
  * @run testng/othervm test.astro.AstroTest
  * @summary run astro application, test xslt
  *
@@ -69,7 +67,6 @@ import org.testng.annotations.Test;
  * AstroProcessor to test different JAXP classes and features.
  *
  */
-@Listeners({jaxp.library.FilePolicy.class})
 public class AstroTest {
     private FiltersAndGolden[] data;
 
