@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,29 +22,21 @@
  */
 package stream.XMLEventReaderTest;
 
-import java.io.FilePermission;
 import java.io.StringReader;
-
 import javax.xml.stream.XMLEventReader;
 import javax.xml.stream.XMLInputFactory;
 import javax.xml.stream.events.EntityReference;
 import javax.xml.stream.events.XMLEvent;
-
-import jaxp.library.JAXPTestUtilities;
-
 import org.testng.Assert;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 
 /*
  * @test
  * @bug 6555001
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow stream.XMLEventReaderTest.Bug6555001
  * @run testng/othervm stream.XMLEventReaderTest.Bug6555001
  * @summary Test StAX parser replaces the entity reference as setting.
  */
-@Listeners({ jaxp.library.BasePolicy.class })
 public class Bug6555001 {
     private static final String XML = ""
             + "<!DOCTYPE doc SYSTEM 'file:///tmp/this/does/not/exist/but/that/is/ok' ["
@@ -52,67 +44,63 @@ public class Bug6555001 {
 
     @Test
     public void testReplacing() throws Exception {
-        JAXPTestUtilities.tryRunWithTmpPermission(() -> {
-            XMLInputFactory factory = XMLInputFactory.newInstance();
-            factory.setProperty("javax.xml.stream.isReplacingEntityReferences", true);
+        XMLInputFactory factory = XMLInputFactory.newInstance();
+        factory.setProperty("javax.xml.stream.isReplacingEntityReferences", true);
 
-            StringReader sr = new StringReader(XML);
-            XMLEventReader reader = factory.createXMLEventReader(sr);
+        StringReader sr = new StringReader(XML);
+        XMLEventReader reader = factory.createXMLEventReader(sr);
 
-            boolean sawUndef = false;
-            boolean sawDef = false;
+        boolean sawUndef = false;
+        boolean sawDef = false;
 
-            while (reader.hasNext()) {
-                XMLEvent event = reader.nextEvent();
-                // System.out.println("Event: " + event);
-                if (event.isEntityReference()) {
-                    EntityReference ref = (EntityReference) event;
-                    if ("def".equals(ref.getName())) {
-                        sawDef = true;
-                    } else if ("undef".equals(ref.getName())) {
-                        sawUndef = true;
-                    } else {
-                        throw new IllegalArgumentException("Unexpected entity name");
-                    }
+        while (reader.hasNext()) {
+            XMLEvent event = reader.nextEvent();
+            // System.out.println("Event: " + event);
+            if (event.isEntityReference()) {
+                EntityReference ref = (EntityReference) event;
+                if ("def".equals(ref.getName())) {
+                    sawDef = true;
+                } else if ("undef".equals(ref.getName())) {
+                    sawUndef = true;
+                } else {
+                    throw new IllegalArgumentException("Unexpected entity name");
                 }
             }
+        }
 
-            Assert.assertEquals(false, sawDef);
-            Assert.assertEquals(true, sawUndef);
-            reader.close();
-        }, new FilePermission("/tmp/this/does/not/exist/but/that/is/ok", "read"));
+        Assert.assertEquals(false, sawDef);
+        Assert.assertEquals(true, sawUndef);
+        reader.close();
     }
 
     @Test
     public void testNotReplacing() throws Exception {
-        JAXPTestUtilities.tryRunWithTmpPermission(() -> {
-            XMLInputFactory factory = XMLInputFactory.newInstance();
-            factory.setProperty("javax.xml.stream.isReplacingEntityReferences", false);
+        XMLInputFactory factory = XMLInputFactory.newInstance();
+        factory.setProperty("javax.xml.stream.isReplacingEntityReferences", false);
 
-            StringReader sr = new StringReader(XML);
-            XMLEventReader reader = factory.createXMLEventReader(sr);
+        StringReader sr = new StringReader(XML);
+        XMLEventReader reader = factory.createXMLEventReader(sr);
 
-            boolean sawUndef = false;
-            boolean sawDef = false;
+        boolean sawUndef = false;
+        boolean sawDef = false;
 
-            while (reader.hasNext()) {
-                XMLEvent event = reader.nextEvent();
-                // System.out.println("Event: " + event);
-                if (event.isEntityReference()) {
-                    EntityReference ref = (EntityReference) event;
-                    if ("def".equals(ref.getName())) {
-                        sawDef = true;
-                    } else if ("undef".equals(ref.getName())) {
-                        sawUndef = true;
-                    } else {
-                        throw new IllegalArgumentException("Unexpected entity name");
-                    }
+        while (reader.hasNext()) {
+            XMLEvent event = reader.nextEvent();
+            // System.out.println("Event: " + event);
+            if (event.isEntityReference()) {
+                EntityReference ref = (EntityReference) event;
+                if ("def".equals(ref.getName())) {
+                    sawDef = true;
+                } else if ("undef".equals(ref.getName())) {
+                    sawUndef = true;
+                } else {
+                    throw new IllegalArgumentException("Unexpected entity name");
                 }
             }
+        }
 
-            Assert.assertEquals(true, sawDef);
-            Assert.assertEquals(true, sawUndef);
-            reader.close();
-        }, new FilePermission("/tmp/this/does/not/exist/but/that/is/ok", "read"));
+        Assert.assertEquals(true, sawDef);
+        Assert.assertEquals(true, sawUndef);
+        reader.close();
     }
 }
