@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,14 +23,10 @@
 
 package validation;
 
-import static jaxp.library.JAXPTestUtilities.USER_DIR;
-import static jaxp.library.JAXPTestUtilities.runWithTmpPermission;
-
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileWriter;
 import java.util.PropertyPermission;
-
 import javax.xml.XMLConstants;
 import javax.xml.stream.XMLEventReader;
 import javax.xml.stream.XMLInputFactory;
@@ -41,20 +37,17 @@ import javax.xml.transform.stax.StAXResult;
 import javax.xml.validation.Schema;
 import javax.xml.validation.SchemaFactory;
 import javax.xml.validation.Validator;
-
 import org.testng.Assert;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.xml.sax.ErrorHandler;
+import static jaxp.library.JAXPTestUtilities.USER_DIR;
 
 /*
  * @test
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow validation.ValidatorTest
  * @run testng/othervm validation.ValidatorTest
  * @summary Test Validator.validate(Source, Result).
  */
-@Listeners({jaxp.library.FilePolicy.class})
 public class ValidatorTest {
 
     @Test
@@ -96,8 +89,7 @@ public class ValidatorTest {
             // Validate this instance document against the
             // Instance document supplied
             File resultAlias = resultFile;
-            Result xmlResult = runWithTmpPermission(() -> new javax.xml.transform.stream.StreamResult(
-                    resultAlias), new PropertyPermission("user.dir", "read"));
+            Result xmlResult = new javax.xml.transform.stream.StreamResult(resultAlias);
             Source xmlSource = new javax.xml.transform.stream.StreamSource(new File(ValidatorTest.class.getResource("toys.xml").toURI()));
 
             validate("toys.xsd", xmlSource, xmlResult);
@@ -126,8 +118,7 @@ public class ValidatorTest {
             // Validate this instance document against the
             // Instance document supplied
             File resultAlias = resultFile;
-            Result xmlResult = runWithTmpPermission(() -> new javax.xml.transform.stream.StreamResult(
-                    resultAlias), new PropertyPermission("user.dir", "read"));
+            Result xmlResult = new javax.xml.transform.stream.StreamResult(resultAlias);
             Source xmlSource = new javax.xml.transform.stream.StreamSource(new File(ValidatorTest.class.getResource("gMonths.xml").toURI()));
 
             validate("gMonths.xsd", xmlSource, xmlResult);
