@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2006, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@
  * @test
  * @bug 4741757 6402062 6471539
  * @summary Tests Dimension encoding
- * @run main/othervm -Djava.security.manager=allow java_awt_Dimension
+ * @run main/othervm java_awt_Dimension
  * @author Sergey Malenkov
  */
 
@@ -33,7 +33,7 @@ import java.awt.Dimension;
 
 public final class java_awt_Dimension extends AbstractTest<Dimension> {
     public static void main(String[] args) {
-        new java_awt_Dimension().test(true);
+        new java_awt_Dimension().test();
     }
 
     protected Dimension getObject() {
